<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="move_right">Move Rigth</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="move_left">Move Left</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="time_left">Time Left: %1$d</string>
    <string name="timer">Timer: %1$d</string>
    <string name="pause">Pause</string>
    <string name="start">start</string>
    <string name="reset">Reset</string>
</resources>
